# window_clipboard

macos/: Cargo.toml
macos/src/: lib.rs
