[package]
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
description = "A library to obtain access to the macOS clipboard"
documentation = "https://docs.rs/clipboard_macos"
edition = "2018"
keywords = ["clipboard", "macos"]
license = "Apache-2.0"
name = "clipboard_macos"
repository = "https://github.com/hecrj/window_clipboard"
version = "0.1.0"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
objc2 = "0.5.1"
objc2-app-kit = { version = "0.2.0", features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.2.0", features = ["NSArray", "NSString", "NSURL"] }
